--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,13 @@ body {
     height: 20px;
 }
 
+#play {
+    padding: 5px;
+    border: 1px solid white;
+    border-radius: 20px;
+    margin-left: 20px;
+}
+
 #grid {
     max-width: 600px;
     margin-top: 100px;
